fix hidden overflow on about page
the questions have been cut off

--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -323,7 +323,6 @@ a {
   text-align: right;
 }
 .main > .box article {
-  overflow: hidden;
   padding: 0 0 2em;
 }
 
